Core token endpoints with support for both password grant and facebook auth

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,6 @@ config/secrets.yml
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
-# if using bower-rails ignore default bower_components path bower.json files
-/vendor/assets/bower_components
-*.bowerrc
-bower.json
-
-# Ignore pow environment settings
-.powenv
+# dummy app dbs and logs
+spec/dummy/db/*
+spec/dummy/log/*
