Hide generated tags file

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .DS_Store
+tags
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
