run rubocop as part of travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache: bundler
 script: 
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec
+  - bundle exec rubocop
 
 notifications:
   email:
