--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ rvm:
   - rbx-2
   - jruby-19mode
 
+install: bundle install --without development --deployment --jobs=3 --retry=3  --path=${BUNDLE_PATH:-vendor/bundle}
+
 cache: bundler
 
 script: 
