ignore Gemfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ rerun.txt
 pickle-email-*.html
 .DS_Store
 tags
+Gemfile.lock
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
 
