--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,8 @@ script:
   - bundle exec rubocop
 
 notifications:
-  email:
-    on_success: never
+  email: false
   slack:
     rooms:
       secure: OOKD4ZksqzEBW/A3WRuOToODIxnDITqx+Esu7tdmmYPuQlMYgx4SUHv8j9OM9/ScFJiseeVGSkl45vJrHLLIITX9XSjO1RgiGZgw2heVujmGpF6CZNqvT6GsQuKIvMzmwF7IxuHdfV45Csr9Ou/Fg74TszR/4S2h4SOI4zhLg7A=
-      on_success: never
+    on_success: never
