--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,9 @@ Style/Documentation:
 Style/GuardClause:
   Enabled: false
 
+Metrics/MethodLength:
+  Enabled: false
+
 Metrics/LineLength:
   Enabled: false
 
