trying to get travis yml to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ rvm:
 gemfile:
   - gemfiles/rails_3.gemfile
   - gemfiles/rails_4.gemfile
+  - gemfiles/rails_5.gemfile
 
-script: 
+script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec
   - bundle exec rubocop
