--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: ruby
 
 rvm:
-  - 2.2.4
+  - 2.2.5
   - 2.3.0
-  - jruby-9.0.5.0
+  - jruby-9.1.5.0
 
 gemfile:
   - gemfiles/rails_3.gemfile
   - gemfiles/rails_4.gemfile
+  - gemfiles/rails_5.gemfile
 
-script: 
+script:
   - RAILS_ENV=test bundle exec rake db:migrate
   - bundle exec rspec
   - bundle exec rubocop
